# InfluenceMaximizationGPU

./: .gitignore  CMakeCache.txt  CMakeLists.txt  GPUKernels.cu  GPUKernels.h  GPUMemManager.cu  GPUMemManager.h  GPUcBFS.cu  GPUcBFS.h  GraphStruct.cu  GraphStruct.h  GraphStruct.hpp  Makefile  README.md  globalSettings.h  main.cpp  mainForGPU.cpp  para_test  para_test.cpp
data/: nodes.txt  prob_gen.py
data/epinions/: attribute.txt
data/slashdot/: attribute.txt
max_cover/: MaxCover.cu  MaxCover.h  test.cpp
para_estimation/: Makefile  graph.h  head.h  infgraph.h  tim  tim.cpp  timgraph.h
